Fix gap between guilds and channels

--- a/src/components/primary/_core.scss
+++ b/src/components/primary/_core.scss
@@ -2,4 +2,5 @@
 .theme-dark .base-3dtUhz{
     height: calc(100vh - 32px);
     position: unset;
+    margin-left: -48px;
 }
